# explore-lonboard

./: .env.example  .gitignore  Dockerfile  Makefile  QUICKSTART.md  README.md  docker-compose.yml  instructions.txt  pyproject.toml  requirements.txt  run-notebook.sh
data/: trips_animation.html  trips_theme_final.html  trips_with_buildings.html
examples/: data-filter-extension.ipynb
notebooks/: duckdb_heatmap.ipynb  geoparquet_loading.ipynb  movingpandas.ipynb  overture_3d_building_data_viz.ipynb  trips_layer_using_lonboard.ipynb
