[project]
name = "lonboard-app"
version = "0.1.0"
description = "Lonboard and DuckDB exploration application"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.0.0",
    "lonboard>=0.8.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
]

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"
